add storagetType test and handle storage go one step when htere is no sources